--- a/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
@@ -30,17 +30,17 @@
 
 </script>
  <div class="msj_contacto">
-    <h2>[% 'Asunto' | i18n %]: [% mensaje.getAsunto %]</h2>
+    <h2>[% 'Asunto' | i18n %]: [% HTML.escape(mensaje.getAsunto) %]</h2>
     <input type="hidden" id="asunto" name="asunto" value="[% mensaje.getAsunto %]">
 
         <fieldset>
         
             <legend>[% 'Cuerpo del mensaje' | i18n %]:</legend>
-            <h3>[% mensaje.getMensaje %]</h3>
+            <h3>[% HTML.escape(mensaje.getMensaje) %]</h3>
             <input type="hidden" name="mensaje_contacto" id="mensaje_contacto" value="[% mensaje.getMensaje %]">
 
         </fieldset>
-        <p>[% 'De' | i18n %]: [% mensaje.getApellido %], [% mensaje.getNombre %] ([% mensaje.getEmail %])</p>
+        <p>[% 'De' | i18n %]: [% HTML.escape(mensaje.getApellido) %], [% HTML.escape(mensaje.getNombre) %] ([% HTML.escape(mensaje.getEmail) %])</p>
         <input type="hidden" name="email" id="email" value="[% mensaje.getEmail %]">
         <h1 id="responder" class="pagetitle" onclick="responder()"> [% 'Responder mensaje' | i18n %]</h1>
                   <div class="responder" style="display:none; padding-top:10px;">
