--- a/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
@@ -31,13 +31,13 @@
 </script>
  <div class="msj_contacto">
     <h2>[% 'Asunto' | i18n %]: [% HTML.escape(mensaje.getAsunto) %]</h2>
-    <input type="hidden" id="asunto" name="asunto" value="[% mensaje.getAsunto %]">
+    <input type="hidden" id="asunto" name="asunto" value="[% HTML.escape(mensaje.getAsunto) %]">
 
         <fieldset>
         
             <legend>[% 'Cuerpo del mensaje' | i18n %]:</legend>
             <h3>[% HTML.escape(mensaje.getMensaje) %]</h3>
-            <input type="hidden" name="mensaje_contacto" id="mensaje_contacto" value="[% mensaje.getMensaje %]">
+            <input type="hidden" name="mensaje_contacto" id="mensaje_contacto" value="[% HTML.escape(mensaje.getMensaje) %]">
 
         </fieldset>
         <p>[% 'De' | i18n %]: [% HTML.escape(mensaje.getApellido) %], [% HTML.escape(mensaje.getNombre) %] ([% HTML.escape(mensaje.getEmail) %])</p>
