XSS en ver_mensaje.html v4

--- a/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
@@ -1,3 +1,4 @@
+[% USE HTML %]
 <script type="text/javascript" src="/includes/jquery/jquery.wysiwyg.js"></script>
 <link rel="stylesheet" href="/includes/css/wysiwyg.css" type="text/css" media="screen"/>
 
